# artwebsite

./: .gitignore  CLAUDE.md  LANDING_PAGES.md  META_ADS_TODO.md  README.md  RECOMMENDATIONS.md  SHOCKWAVE.md  db.sqlite3  manage.py  pyproject.toml
.claude/: settings.json
.claude/hooks/: mmc_journal_reminder.py
.github/workflows/: deploy.yml
acceleratedrehabtherapy/: asgi.py  settings.py  urls.py  wsgi.py
acceleratedrehabtherapy/apps/: README.md
acceleratedrehabtherapy/apps/main/: admin.py  apps.py  models.py  sitemaps.py  urls.py  views.py
acceleratedrehabtherapy/data/: legacy_reviews.json
acceleratedrehabtherapy/static/: robots.txt  sitemap.xml
acceleratedrehabtherapy/static/js/: main.js
acceleratedrehabtherapy/static/resources/: Understanding Back & Neck Pain.md  whiplash-recovery-guide.md
acceleratedrehabtherapy/staticfiles/: package.json  styles.css  tailwind.config.js
acceleratedrehabtherapy/staticfiles/src/: styles.css
acceleratedrehabtherapy/templates/: base.html  base_landing.html  sitemap.xml
acceleratedrehabtherapy/templates/includes/: _blog_articles.html  _chiropractor_faqs.html  _cta_arrow_button.html  _cta_section.html  _focus_areas.html  _holistic_approach.html  _landing_bonuses.html  _landing_cta.html  _landing_form.html  _landing_image_placeholder.html  _landing_pricing.html  _landing_trust.html  _locations_map.html  _partners.html  _pt_faqs.html  _reviews.html  _services.html  _services_grid.html  _structured_data.html  footer.html  header.html
acceleratedrehabtherapy/theme/: apps.py
(+32 files in other folders)
