[tool.poetry]
name = "artwebsite"
version = "0.1.0"
description = "Update and upgrade to acceleratedrehabtherapy.com"
authors = ["nate ginn <growyourbiz4ever@gmail.com>"]
readme = "README.md"
packages = [{include = "acceleratedrehabtherapy"}]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
django-ckeditor-5 = "^0.2.15"
pillow = "^11.0.0"
django-jazzmin = "^2.6.0"
django-tailwind = {extras = ["reload"], version = "^3.8.0"}
django-htmx = "^1.17.2"
django-compressor = "^4.4"
whitenoise = "^6.6.0"
django-ckeditor = "^6.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
